--- a/src/style.less
+++ b/src/style.less
@@ -13,6 +13,33 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+*{
+  // box-sizing: border-box;
+  font-weight: 400;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  box-sizing: border-box;
+  font-style: normal;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  outline: none;
+  border: none;
+  a{
+    &:focus{
+      outline: none;
+    }
+  }
+  a,
+  input,
+  button,
+  textarea,
+  [class*='pui-'] {
+    &:focus {
+      outline: none;
+    }
+  }
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -24,10 +51,10 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  // display: flex;
+  // place-items: center;
+  // min-width: 320px;
+  // min-height: 100vh;
 }
 
 h1 {
@@ -35,35 +62,6 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-.card {
-  padding: 2em;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -77,3 +75,5 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+ul,li,ol{list-style: none;}
+
