--- a/src/style.less
+++ b/src/style.less
@@ -12,6 +12,11 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+body {
+  background: #f5f5f5;
+  height: 100vh;
+  overflow: hidden;
+}
 
 *{
   // box-sizing: border-box;
